updated entity - removed redundant ID storage
updated tests and handlers to better manage logic