@@ -2,12 +2,9 @@ package com.example.customerorder.application.command.createCustomerOrder.handle
 
 import com.example.customerorder.application.command.createCustomerOrder.CreateCustomerOrderCommand;
 import com.example.customerorder.domain.port.CustomerOrderRepositoryPort;
-import com.example.customerorder.domain.port.ManufacturingOrderFacadePort;
 import com.example.customerorder.domain.model.aggregate.CustomerOrder;
 import com.example.customerorder.domain.model.valueobject.OrderItem;
-import com.example.manufacturingorder.adapter.dto.response.GetManufacturingOrderResponse;
 import com.example.manufacturingorder.domain.event.CreateManufacturingOrdersEvent;
-import com.example.manufacturingorder.domain.model.enums.ManufacturingStatus;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -26,8 +23,7 @@ class CreateCustomerOrderHandlerTest {
 
     @Mock
     private CustomerOrderRepositoryPort customerOrderRepositoryPort;
-    @Mock
-    private ManufacturingOrderFacadePort manufacturingOrdersFacadeAdapter;
+
     @Mock
     private ApplicationEventPublisher eventPublisher;
 
@@ -38,12 +34,12 @@ class CreateCustomerOrderHandlerTest {
     void createCustomerOrder_shouldCreateOrderAndPublishEvent() {
         Long customerId = 1L;
         List<OrderItem> items = List.of(
-                new OrderItem(101L, 2),
-                new OrderItem(102L, 1)
+                new OrderItem(1L, 2),
+                new OrderItem(2L, 1)
         );
         var command = new CreateCustomerOrderCommand(customerId, items);
 
-        Long savedOrderId = 100L;
+        Long savedOrderId = 1L;
 
         when(customerOrderRepositoryPort.save(any(CustomerOrder.class)))
                 .thenAnswer(invocation -> {
@@ -52,13 +48,6 @@ class CreateCustomerOrderHandlerTest {
                     return savedOrderId;
                 });
 
-        List<GetManufacturingOrderResponse> manufacturingResponses = List.of(
-                new GetManufacturingOrderResponse(1L, 1L, 2L, 1, ManufacturingStatus.PENDING, "info"),
-                new GetManufacturingOrderResponse(2L, 1L, 3L, 1, ManufacturingStatus.PENDING, "info")
-        );
-        when(manufacturingOrdersFacadeAdapter.getCustomerOrdersManufacturingOrders(savedOrderId))
-                .thenReturn(manufacturingResponses);
-
         handler.createCustomerOrder(command);
 
         ArgumentCaptor<CustomerOrder> orderCaptor = ArgumentCaptor.forClass(CustomerOrder.class);
@@ -66,10 +55,8 @@ class CreateCustomerOrderHandlerTest {
 
         List<CustomerOrder> savedOrders = orderCaptor.getAllValues();
 
-        assertEquals(items, savedOrders.get(0).getItems());
-        assertEquals(100L, savedOrders.get(0).getId());
-
-        assertEquals(List.of(1L, 2L), savedOrders.get(1).getManufacturingOrderIds());
+        assertEquals(items, savedOrders.getFirst().getItems());
+        assertEquals(1L, savedOrders.getFirst().getId());
 
         ArgumentCaptor<CreateManufacturingOrdersEvent> eventCaptor =
                 ArgumentCaptor.forClass(CreateManufacturingOrdersEvent.class);
@@ -91,10 +78,10 @@ class CreateCustomerOrderHandlerTest {
     @Test
     void createCustomerOrder_shouldHandleEmptyManufacturingOrdersResponse() {
         Long customerId = 1L;
-        List<OrderItem> items = List.of(new OrderItem(101L, 1));
+        List<OrderItem> items = List.of(new OrderItem(1L, 1));
         var command = new CreateCustomerOrderCommand(customerId, items);
 
-        Long savedOrderId = 100L;
+        Long savedOrderId = 1L;
 
         when(customerOrderRepositoryPort.save(any(CustomerOrder.class)))
                 .thenAnswer(invocation -> {
@@ -103,14 +90,9 @@ class CreateCustomerOrderHandlerTest {
                     return savedOrderId;
                 });
 
-        when(manufacturingOrdersFacadeAdapter.getCustomerOrdersManufacturingOrders(savedOrderId))
-                .thenReturn(List.of());
-
         handler.createCustomerOrder(command);
 
         ArgumentCaptor<CustomerOrder> orderCaptor = ArgumentCaptor.forClass(CustomerOrder.class);
         verify(customerOrderRepositoryPort, times(2)).save(orderCaptor.capture());
-
-        assertTrue(orderCaptor.getAllValues().get(1).getManufacturingOrderIds().isEmpty());
     }
 }
